# slam-MapGenerator

./: .gitignore  CMakeLists.txt  README.md  build.sh
Vocabulary/: .gitattributes
config/: example.yaml  loop_closing.yaml  loop_detector_config.yaml  surface_recon_config.yaml  surface_recon_plane.yaml
datasets/: README.md
playground/: CMakeLists.txt  example.cpp  reader.cpp
src/: map_generator.cpp
src/DBoW2-ext/: ORBVocabularyExt.h  TemplatedVocabularyExt.h
src/bundle-adjustment/: bundle_adjuster.cpp  bundle_ajustment.cpp  bundle_ajustment.h  bundleajustment.h
src/common/: Camera.cpp  Camera.h  Config.cc  Config.h  KeyFrame.cc  KeyFrame.h  Map.cc  Map.h  MapPoint.cc  MapPoint.h
src/config/: LoopDetectionConfig.cpp  LoopDetectionConfig.h  NodeConfig.cpp  NodeConfig.h
src/logging/: .gitignore  logging_util.cpp  logging_util.h.in
src/loop-closure/: Connection.cpp  Connection.h  LoopConnection.cpp  LoopConnection.h  LoopDetection.cpp  LoopDetector.cpp  LoopDetector.h  Optimizer.cpp  Optimizer.h  pose_graph_3d.cpp  pose_graph_3d.h  pose_graph_3d_error_term.h  types.h  types.hpp
src/loop-detector/: LoopDetection.cpp  LoopDetector.cpp  LoopDetector.h
src/surface_recon/: surface_recon_util.cpp  surface_recon_util.h
src/tests/: load_img.cpp  loop_closing.cpp  surface_recon.cpp  view_test.cpp
src/tools/: VocabularyConverter.cpp
src/util/config/: NodeConfig.cpp  NodeConfig.h
src/util/io/: JdeRobotIO.cpp  JdeRobotIO.h
src/util/logging/: README.md
src/visualization/: MapDrawer.cc  MapDrawer.h  Viewer.cc  Viewer.h
